--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".BluetoothConnectionReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.bluetooth.adapter.action.ACL_CONNECTED"/>
+                <action android:name="android.bluetooth.adapter.action.ACL_DISCONNECTED"/>
+            </intent-filter>
+        </receiver>
         <service android:name=".SerialService" />
     </application>
 
